--- a/lp.html
+++ b/lp.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="lp.css">
 </head>
 <body>
     <header class="header">
-        <img src="" alt="">
+        <img src="health.jpg"  id="logo" alt="">
+        <nav class="navbar">
+            <a href="#">Home</a>
+            <a href="#">about</a>
+            <a href="#">services</a>
+            <a href="#">gallery</a>
+            <a href="#">contact</a>
+        </nav>
+        <div class="icons">
+            <div id="menubar" class="fas fa-bars"></div>
+            <a href="#">contact</a>
+        </div>
     </header>
 </body>
 </html>
