--- a/lp.html
+++ b/lp.html
@@ -21,5 +21,15 @@
             <a href="#">contact</a>
         </div>
     </header>
+    <main class="main">
+        <section>
+			<h3>Welcome To Healthcare</h3>
+			<h1> <span class="change_content"> </span> <span style="margin-top: -10px;"> More than just treating patients. </span> </h1>
+			<p>"North India's most trusted healthcare"</p>
+			<a href="#" class="btnone">learn more</a>
+			<a href="#" class="btntwo">signup here</a>
+		</section>
+    </main>
+    
 </body>
 </html>
